tests/spec/emit/snapshots/underscore_prefixed_binding_unused.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let _x = 42;
  }
---
package main

func test() {}
