tests/spec/emit/snapshots/underscore_prefixed_binding_used.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let _x = 42;
    _x
  }
---
package main

func test() int {
	_x := 42
	return _x
}
