tests/spec/emit/snapshots/underscore_prefixed_let_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let s = "hello, world";
    let _unused = s;
    fmt.Print("Done\n");
  }
---
package main

import "fmt"

func test() {
	fmt.Print("Done\n")
}
