tests/spec/emit/snapshots/underscore_prefixed_let_with_option_result_call.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn get_result() -> Result<int, string> {
    Ok(42)
  }
  
  fn test() {
    let _unused = get_result();
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func getResult() lisette.Result[int, string] {
	return lisette.MakeResultOk[int, string](42)
}

func test() {
	getResult()
}
