tests/spec/emit/snapshots/underscore_prefixed_match_arm_binding_used.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test(opt: Option<int>) -> int {\n  match opt {\n    Some(_val) => _val + 1,\n    None => 0,\n  }\n}\n"
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) int {
	if opt.Tag == lisette.OptionSome {
		return opt.SomeVal + 1
	}
	return 0
}
