tests/spec/emit/snapshots/underscore_type_name_gets_a_receiver_letter.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct _foo { x: int }
  
  impl _foo {
    fn get(self) -> int { self.x }
  }
---
package main

type _foo struct {
	x int
}

func (f _foo) get() int {
	return f.x
}
