tests/spec/emit/snapshots/unicode_escape_bmp_in_string.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\u{00E9}"
  }
---
package main

func test() string {
	return "\u00E9"
}
