tests/spec/emit/snapshots/unicode_escape_in_char.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> rune {
    '\u{e9}'
  }
---
package main

func test() rune {
	return '\u00E9'
}
