tests/spec/emit/snapshots/unicode_escape_in_string.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> string {
    "\u{1F600}"
  }
---
package main

func test() string {
	return "\U0001F600"
}
