tests/spec/emit/snapshots/unit_alias_interface_method_has_no_go_result.snap
---
source: tests/spec/emit/types.rs
description: |
  
  type U = ()
  
  interface Doer {
    fn run() -> U
  }
  
  struct A {}
  
  impl A {
    fn run(self) {}
  }
  
  fn test() {
    let d: Doer = A {}
    let _ = d.run()
  }
---
package main

type U = struct{}

type Doer interface {
	Run()
}

type A struct{}

func (a A) Run() {}

func test() {
	var d Doer = A{}
	d.Run()
}
