tests/spec/emit/snapshots/unit_block_as_tuple_element_emits_struct_empty.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn side() {
    fmt.Println("side")
  }
  
  fn test() -> int {
    let t = ({ side() }, 1)
    t.1
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func side() {
	fmt.Println("side")
}

func test() int {
	side()
	t := lisette.MakeTuple2[struct{}, int](struct{}{}, 1)
	return t.Second
}
