tests/spec/emit/snapshots/unit_call_as_assignment_rhs.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn test() {
    let mut x: () = ()
    x = noop()
    let _ = x
  }
---
package main

func noop() {}

func test() {
	x := struct{}{}
	noop()
	x = struct{}{}
	_ = x
}
